@@ -1,4 +1,5 @@
 #!/usr/bin/env perl
+# HARNESS-NO-STREAM
 
 use strict;
 use warnings;
