@@ -18,15 +18,20 @@ local $ENV{HARNESS_ACTIVE} = 0;
 use Test::Builder;
 use Test::Builder::NoOutput;
 
+# TB methods expect to be wrapped
+my $ok           = sub { shift->ok(@_) };
+my $plan         = sub { shift->plan(@_) };
+my $done_testing = sub { shift->done_testing(@_) };
+
 my $Test = Test::Builder->new;
 
 {
     my $tb = Test::Builder::NoOutput->create;
 
-    $tb->plan( tests => 1 );
+    $tb->$plan( tests => 1 );
 
 #line 28
-    $tb->ok(0);
+    $tb->$ok(0);
     $tb->_ending;
 
     $Test->is_eq($tb->read('out'), <<OUT);
@@ -39,5 +44,5 @@ OUT
 # Looks like you failed 1 test of 1.
 ERR
 
-    $Test->done_testing(2);
+    $Test->$done_testing(2);
 }
