@@ -1,4 +1,6 @@
+# HARNESS-NO-STREAM
 # HARNESS-NO-PRELOAD
+
 BEGIN {
     if( $ENV{PERL_CORE} ) {
         chdir 't';
