@@ -1,4 +1,5 @@
 #!perl -w
+# HARNESS-NO-PRELOAD
 
 BEGIN {
     if( $ENV{PERL_CORE} ) {
@@ -41,7 +42,6 @@ SKIP: {
     is( $file || '', '',      '  or file' );
     is( $line || '', '',      '  or line' );
 }
-
 
 SKIP: {
     skip $Why, 2 if 1;
