@@ -53,6 +53,9 @@ sub create {
     my $class = shift;
     my $self = $class->SUPER::create(@_);
 
+    require Test::Builder::Formatter;
+    $self->{Stack}->top->format(Test::Builder::Formatter->new);
+
     my %outputs = (
         all  => '',
         out  => '',
