@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Make several tests work with preload
+
 1.302094  2017-08-30 21:27:23-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix Test::Builder in a preload scenario
